--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ footer {
   letter-spacing: -0.5px;
   font-size: 24px;
   line-height: 1.2;
+  margin-top: 39px;
   margin-bottom: 5px;
   text-align: center;
 }
@@ -232,14 +233,3 @@ button:active {
   background-color: #cf711f;
   cursor: pointer;
 }
-
-/* .nav-buttons:link,
-.nav-buttons:visited {
-  font-weight: 700;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 9px;
-  color: #fff;
-  border: none;
-  background-color: #e8590c;
-} */
